Better handling of baseURI.